apache-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pod1
        pathType: Prefix
        backend:
          service:
            name: apache-service-1
            port:
              number: 80
      - path: /pod2
        pathType: Prefix
        backend:
          service:
            name: apache-service-2
            port:
              number: 80
